fix: Align markdown colors

--- a/client/src/styles.module.scss
+++ b/client/src/styles.module.scss
@@ -174,7 +174,8 @@
   }
 
   .yfm {
-    --yfm-color-text-private: #17394d !important;
+    --yfm-color-link: #1e70bf !important;
+    --yfm-color-text: #17394d !important;
     --yfm-font-family-monospace: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace !important;
     --yfm-font-family-sans: "Nunitoga", "Helvetica Neue", Arial, Helvetica, sans-serif !important;
 
